--- a/pos-web/src/styles/menu-management-styles/forms.css
+++ b/pos-web/src/styles/menu-management-styles/forms.css
@@ -39,6 +39,12 @@
   background: white;
 }
 
+.form-input,
+.form-select {
+  height: 48px;
+  box-sizing: border-box;
+}
+
 .form-input:focus,
 .form-select:focus,
 .form-textarea:focus {
