--- a/pos-web/src/styles/pos.css
+++ b/pos-web/src/styles/pos.css
@@ -903,6 +903,8 @@
   font-size: 14px;
   font-weight: 600;
   color: var(--coffee-dark);
+  height: 48px;
+  box-sizing: border-box;
 }
 
 .btn-clear-cash {
